; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/duck/lightsaver/extr_lightsaver.c_led_set_kb.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/duck/lightsaver/extr_lightsaver.c_led_set_kb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@USB_LED_CAPS_LOCK = common dso_local global i32 0, align 4
@USB_LED_SCROLL_LOCK = common dso_local global i32 0, align 4
@USB_LED_NUM_LOCK = common dso_local global i32 0, align 4
@layer_state = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @led_set_kb(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca [8 x i32], align 16
  store i32 %0, i32* %2, align 4
  %4 = getelementptr inbounds [8 x i32], [8 x i32]* %3, i64 0, i64 0
  %5 = load i32, i32* %2, align 4
  %6 = load i32, i32* @USB_LED_CAPS_LOCK, align 4
  %7 = shl i32 1, %6
  %8 = and i32 %5, %7
  store i32 %8, i32* %4, align 4
  %9 = getelementptr inbounds i32, i32* %4, i64 1
  %10 = load i32, i32* %2, align 4
  %11 = load i32, i32* @USB_LED_SCROLL_LOCK, align 4
  %12 = shl i32 1, %11
  %13 = and i32 %10, %12
  store i32 %13, i32* %9, align 4
  %14 = getelementptr inbounds i32, i32* %9, i64 1
  %15 = load i32, i32* %2, align 4
  %16 = load i32, i32* @USB_LED_NUM_LOCK, align 4
  %17 = shl i32 1, %16
  %18 = and i32 %15, %17
  store i32 %18, i32* %14, align 4
  %19 = getelementptr inbounds i32, i32* %14, i64 1
  %20 = load i32, i32* @layer_state, align 4
  %21 = and i32 %20, 2
  store i32 %21, i32* %19, align 4
  %22 = getelementptr inbounds i32, i32* %19, i64 1
  %23 = load i32, i32* @layer_state, align 4
  %24 = and i32 %23, 4
  store i32 %24, i32* %22, align 4
  %25 = getelementptr inbounds i32, i32* %22, i64 1
  %26 = load i32, i32* @layer_state, align 4
  %27 = and i32 %26, 8
  store i32 %27, i32* %25, align 4
  %28 = getelementptr inbounds i32, i32* %25, i64 1
  %29 = load i32, i32* @layer_state, align 4
  %30 = and i32 %29, 16
  store i32 %30, i32* %28, align 4
  %31 = getelementptr inbounds i32, i32* %28, i64 1
  %32 = load i32, i32* @layer_state, align 4
  %33 = and i32 %32, 32
  store i32 %33, i32* %31, align 4
  %34 = getelementptr inbounds [8 x i32], [8 x i32]* %3, i64 0, i64 0
  %35 = call i32 @indicator_leds_set(i32* %34)
  %36 = load i32, i32* %2, align 4
  %37 = call i32 @led_set_user(i32 %36)
  ret void
}

declare dso_local i32 @indicator_leds_set(i32*) #1

declare dso_local i32 @led_set_user(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
